# CNCSim

./: .gitignore  CMakeLists.txt  CmdTextEdit.cpp  CmdTextEdit.h  GCodeEdit.cpp  GCodeEdit.h  KeyInfoDisplayWidget.cpp  KeyInfoDisplayWidget.h  LogDisplayWidget.cpp  LogDisplayWidget.h  ReadMe.md  ToolTableDialog.cpp  ToolTableDialog.h  cnc_config.h  live_plotter.cpp  live_plotter.h  live_plotter_motion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  probe_line.sh  version_info.cmake
config/: Version.h.in  test.ini
milltask/: CMakeLists.txt  NGCFakeInterface.cpp  NGCFakeInterface.cpp_  NGCFakeInterface.h  NGCInterList.cpp_  NGCInterList.h_  cmdtask.cpp  cmdtask.h  config.h  emcChannel.cpp  emcChannel.h  emcCmd.cpp  emcCmd.h  emcLog.h  emcMsgManager.h  emcMsgQueue.h  emcParas.cpp  emcParas.h  emcTask.cpp  emcTask.h  emccanon.cc_  emctask.cpp  gcode_loader.cpp.bck  gcode_loader.h.bck  kineKins.cpp  kineSwitchkins.cpp  kineUserKins.cpp  mill_task_interface.cpp  mill_task_interface.h  milltask.cpp  milltask.h  motion.cpp  motionAxis.cpp  motionCommand.cpp  motionControl.cpp  motionHoming.cpp  motionPlanner.cpp  motionPlanner.h  motionPose.cpp  motionTask.cpp  (+12 more)
milltask/interface/: mill_task_interface.cpp  mill_task_interface.h
milltask/kines/: .kineCubic.cpp.kate-swp  fiveaxis_kinematics.h  kineCubic.cpp  kineIf.cpp  kineIf.h
milltask/motion/: motion.cpp  motionAxis.cpp  motionHoming.cpp  motionSimpleTp.cpp  motionhalctrl.cpp  motionhalctrl.h
milltask/subsys/: emcChannel.cpp  emcChannel.h  emcLog.cpp  emcLog.h  emcParas.cpp  emccanon.cc  emcmotglb.c  emcmotutil.c  taskintf.cc  usrmotintf.cc
milltask/task/: cmdtask.cpp  emcTask.cpp  emcTask.h  milltask.cpp  milltask.h  motionTask.cpp  mottask.cpp
milltask/traj/: tpSphericalArc.cpp  tpTp.cpp
motionplanner/: CMakeLists.txt  motionplanner.cpp
paras_config/: AxisParamsWidget.h  BaseParamsWidget.cpp  BaseParamsWidget.h  CNCParamsWidgetFactory.cpp  CNCParamsWidgetFactory.h  KinematicParamsWidget.h  ParameterConfigDialog.cpp  ParameterConfigDialog.h  ParamsWidgetFactory.h  TrajParamsWidget.cpp  TrajParamsWidget.h
rtapp/: CMakeLists.txt  rtapp.cpp  rtapp.h  rtapp_interface.cpp  rtapp_interface.h
tool/: CMakeLists.txt  tool_manager.cpp  tool_manager.h
wins/: CmdTextEdit.cpp  DashedLineRenderer.cpp  DashedLineRenderer.h  GCodeEdit.cpp  GCodeEdit.h  GCodeHighlighter.cpp  GCodeHighlighter.h  KeyInfoDisplayWidget.cpp  KeyInfoDisplayWidget.h  NCPaser.cpp  NCPaser.h  NCPlotter.cpp  NCPlotter.h  cnc_config.h  live_plotter.cpp  live_plotter_motion.cpp  live_plotter_motion.h  main.cpp  mainwindow.cpp  mainwindow.h
wins/shaders/: dashed_lines.frag  dashed_lines.vert  shaders.qrc
